reaction/bug: spacing looked bad when there were no intermediates.

--- a/src/styles/components.sass
+++ b/src/styles/components.sass
@@ -498,8 +498,6 @@
       float: right
 
   .reaction-intermediate
-    padding-bottom: 0.35em
-
     .ellipsis
       font-size: 2.4em
       font-weight: bold
@@ -509,6 +507,9 @@
       color: $color-ultrafade
       font-size: 0.9em
       position: relative
+
+  .reaction-root
+    padding-top: 0.35em
 
 .varyingDelta
   overflow: hidden
